faet: 列表页样式

--- a/src/pages/Home/Header/index.module.less
+++ b/src/pages/Home/Header/index.module.less
@@ -1,3 +1,17 @@
+.header-box {
+  margin-bottom: 0.53rem;
+  border-radius: 0.37rem;
+}
+.header-avatar-box {
+  height: 4.48rem;
+}
+.header-desc-box {
+  height: 4.48rem;
+}
+.header-social-box {
+  grid-template-columns: repeat(3, 1rem);
+  grid-template-rows: 1rem;
+}
 .header-social {
-  border: 1px solid #eee;
+  // border: 1px solid #eee;
 }
